--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li {
+  list-style-type: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wrapper {
+  margin: 0 auto;
+  width: 1200px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: rgb(25, 190, 149);
+}
+
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 20%;
 }
 
-.App-link {
-  color: #61dafb;
+.quiz-container {
+  background-color: #fff;
+  width: 750px;
+  padding: 30px 40px;
+  border-radius: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.steps-block {
+  position: relative;
+  margin-bottom: 25px;
+  width: 100%;
+}
+
+.gray-step {
+  width: 100%;
+  border-bottom: 5px solid gray;
+}
+
+.step {
+  position: absolute;
+  border-bottom: 5px solid rgb(11, 231, 176);
+  transition: .2s;
+}
+
+.quetions-container h1 {
+  margin-bottom: 25px;
+}
+
+.quetions-container li {
+  display: flex;
+  align-items: center;
+  margin: 25px 0;
+  box-shadow: 1px 1px 5px rgba(122, 122, 122, 0.5);
+  padding: 10px;
+}
+
+.quetions-container li:last-of-type {
+  margin: 25px 0 0 0;
+}
+
+
+.quetions-container li span {
+  margin-left: 15px;
+  width: 95%;
+}
+
+.box {
+  width: 22px;
+  height: 22px;
+  background: url(../public/imgs/checkbox-1.png) no-repeat;
+  cursor: pointer;
+}
+
+.active {
+  width: 22px;
+  height: 22px;
+  background: url(../public/imgs/verified.svg) no-repeat;
+  cursor: pointer;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+button {
+  background-color: rgb(11, 231, 176);
+  border: none;
+  padding: 10px 25px;
+  margin-top: 25px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  cursor: pointer;
+}
+
+.button-gray {
+  background-color: gray;
+  cursor: not-allowed;
 }
